--- a/package.json
+++ b/package.json
@@ -29,18 +29,22 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@types/d3": "^7.1.0",
+    "angular-google-charts": "^2.2.2",
+    "d3": "^7.2.1",
+    "d3-timelines-edited": "^1.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.13",
-    "@angular/cli": "~12.2.5",
     "@angular-eslint/builder": "~12.4.1",
     "@angular-eslint/eslint-plugin": "~12.4.1",
     "@angular-eslint/eslint-plugin-template": "~12.4.1",
     "@angular-eslint/schematics": "12.4.1",
     "@angular-eslint/template-parser": "~12.4.1",
+    "@angular/cli": "~12.2.5",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
