--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
                 "plugin:@typescript-eslint/recommended"
             ],
             "rules": {
-                "@typescript-eslint/no-explicit-any": "off",
+                "@typescript-eslint/no-explicit-any": "warn",
                 "@typescript-eslint/no-inferrable-types": "off",
                 "@angular-eslint/component-selector": [
                     "error",
