--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
                 "@typescript-eslint/no-explicit-any": "warn",
                 "@typescript-eslint/no-inferrable-types": "off",
                 "@angular-eslint/component-selector": [
-                    "error",
+                    "off",
                     {
                         "prefix": "aep",
                         "style": "kebab-case",
