--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@angular/router": "~12.2.0",
     "@types/d3": "^7.1.0",
     "angular-google-charts": "^2.2.2",
+    "chart.js": "^2.9.3",
     "d3": "^7.2.1",
     "d3-timelines-edited": "^1.3.3",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
