--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular-google-charts": "^2.2.2",
     "chart.js": "^2.9.3",
     "d3": "^7.2.1",
+    "d3-timelines": "^1.3.1",
     "d3-timelines-edited": "^1.3.3",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
