--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>
+#
+# SPDX-License-Identifier: Apache-2.0
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
@@ -45,3 +49,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Build tools
+build/build-tools
